/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api.common.auth;

import "api/common/base.proto";
import "api/common/r.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.center.auth";
option java_outer_classname = "UserLoginProto";
option objc_class_prefix = "Auth";
option java_multiple_files = true;

/*
Api
服务接口，定义了用户登录相关的RPC调用
*/
service UserLoginApi {
  // 通过登录名称查询用户登录信息
  rpc SelectByName (GrpcNameQuery) returns (GrpcRUserLoginDTO);
}

// selectByName Query
// 通过名称查询的请求结构体
message GrpcNameQuery {
  string name = 1; // 登录名称，用于查询用户登录信息
}

// R of UserLogin DTO
// 返回用户登录信息的响应结构体
message GrpcRUserLoginDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  Data
  返回的用户登录数据
  */
  GrpcUserLoginDTO data = 2;
}

// UserLogin DTO
// 用户登录数据结构体，包含用户登录的基本信息
message GrpcUserLoginDTO {
  /*
  Base
  通用基础字段（如ID、创建时间等）
  */
  GrpcBase base = 1;

  string login_name = 2; // 登录名称，用户登录时使用的用户名
  int64 user_id = 3; // 用户ID，关联到具体用户
  int64 user_password_id = 4; // 用户密码ID，关联到密码表
  int32 enable_flag = 5; // 启用标识，1为启用，0为禁用
}