/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.common.manager;

import "api/common/page.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.center.manager";
option java_outer_classname = "QueryPageProto";
option objc_class_prefix = "Manager";
option java_multiple_files = true;

/*PageDriverQuery*/
message GrpcPageDriverQuery {
  /*
  Page
  */
  GrpcPage page = 1;

  /*
  租户ID
  */
  int64 tenant_id = 2;

  /*
  查询字段
   */
  string driver_name = 3;
  string driver_code = 4; // 驱动编号
  string service_name = 5; // 驱动服务名称
  string service_host = 6; // 服务主机
  int32 driver_type_flag = 7; // 驱动类型标识
  int32 enable_flag = 8; // 使能标识
  int32 version = 9; // 版本
}

/*PagePointQuery*/
message GrpcPagePointQuery {
  /*
  Page
  */
  GrpcPage page = 1;

  /*
  租户ID
  */
  int64 tenant_id = 2;

  /*
  查询字段
   */
  string point_name = 3; // 位号名称
  string point_code = 4; // 位号编号
  int32 point_type_flag = 5; // 位号类型标识
  int32 rw_flag = 6; // 读写标识
  int64 profile_id = 7; // 模板ID
  int64 group_id = 8; // 分组ID
  int32 enable_flag = 9; // 使能标识
  int32 version = 10; // 版本

  /*
  附加字段
   */
  int64 device_id = 11; // 设备ID
}

/*
Device Page Query
*/
message GrpcPageDeviceQuery {
  /*
  Page
  */
  GrpcPage page = 1;

  /*
  租户ID
  */
  int64 tenant_id = 2;

  /*
  查询字段
   */
  string device_name = 3; // 位号名称
  string device_code = 4; // 位号编号
  int64 driver_id = 5; // 驱动ID
  int64 group_id = 6; // 分组ID
  int32 enable_flag = 7; // 使能标识
  int32 version = 8; // 版本

  /*
  附加字段
   */
  int64 profile_id = 9; // 位号ID
}



